modal z-index script order correction

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -12,6 +12,7 @@
   align-items: center;
   padding: 10px;
   transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  z-index: 10;
 }
 
 .modal_is-opened {
